# pyaesthetics-api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/routers/: analysis.py  brightness.py  color_detection.py  colorfulness.py  face_detection.py  quad_tree_decomposition.py  self_similarity.py  space_based_decomposition.py  symmetry.py
